k8s/ingress-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress-final
  namespace: cls
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-service
            port:
              number: 5000
